# omtb_load

omtb_control/: CMakeLists.txt  setup.py
omtb_control/launch/: automove_1tb_room1.launch  automove_l_room.launch  automove_y_room.launch  automove_z_room.launch
omtb_control/nodes/: automove_l_room.py  automove_room1.py  automove_room11.py  automove_whdcheck.py  automove_y_room.py  automove_z_room.py  record_resource.sh  save_bag_l.py  save_bag_l.sh  save_bag_y.py  save_bag_y.sh  save_bag_z.py  save_bag_z.sh  save_map.sh  save_map_l.sh  save_map_y.sh  save_map_z.sh
omtb_gazebo/: sa.yaml
omtb_test/: 2019-11-11-17-19-46.bag  CMakeLists.txt  README.md  package.xml  room_y_3speeed.txt
omtb_test/launch/: recorduse_gmapping_room1 .launch  totalmove_gmapping_lroom.launch  totalmove_gmapping_yroom.launch  totalmove_gmapping_zroom.launch
omtb_test/map/: room_11.pgm  room_11.yaml  room_l.pgm  room_l.yaml  room_y_0.1.pgm  room_y_0.1.yaml  room_y_0.1r.pgm  room_y_0.1r.yaml  room_y_0.2.pgm  room_y_0.2.yaml  room_y_0.5.pgm  room_y_0.5.yaml  room_y_1.0.pgm  room_y_1.0.yaml  room_y_3speed.pgm  room_y_3speed.yaml  room_y_origin.pgm  room_y_origin.yaml  room_y_part20.pgm  room_y_part20.yaml  room_y_part200.pgm  room_y_part200.yaml  room_z_delta0.01.pgm  room_z_delta0.01.yaml  room_z_delta0.02.pgm  room_z_delta0.02.yaml  room_z_delta0.1.pgm  room_z_delta0.1.yaml  room_z_m10.pgm  room_z_m10.yaml  room_z_m100.pgm  room_z_m100.yaml  room_z_m150.pgm  room_z_m150.yaml  room_z_p100.pgm  room_z_p100.yaml  room_z_p20.pgm  room_z_p20.yaml  room_z_p200.pgm  room_z_p200.yaml  (+24 more)
(+46 files in other folders)
